styles/Component_PopupPanel.css
.component-popup_panel:not(:has(*)) {
    display: none !important;
    animation: none !important;
}

.component-popup_panel {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1000;

    width: 600px;
    height: auto;
    min-height: 400px;
    padding: 0px;
    
    background-color: var(--ui-box-primary-dark);
    border: 6px solid var(--ui-accent);
    border-radius: 0 !important;

    overflow-x: hidden !important;

    box-shadow: 
        15px 15px 0px 0px rgba(0, 0, 0, 0.6);
        inset: 4px 4px 0px 0px rgba(255, 255, 255, 0.1);

    display: flex;
    flex-direction: column;

    animation: pixelPopIn 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275)forwards;
}

.component-popup_panel > button:first-child {
    position: absolute !important;
    top: -10px !important;
    right: 5px !important;
    width: 55px !important;
    height: 55px !important;
    z-index: 1001 !important;
    display: flex !important;
    justify-content: center !important;
    align-items: center !important;

    background-color: #d61d08 !important;
    border-color: #520b03 !important;

}

.component-popup_panel > button:first-child:hover {
    background-color: #ff3b1a !important;
    border-color: #520b03 !important;
    transform: scale(1.1) !important;
}

.component-popup_panel > button:first-child:active {
    transform: scale(0.9) !important;
}

.component-popup_panel > :nth-child(2) {
    width: 100% !important;
    display: flex !important;
    flex-direction: column !important;
    align-items: right !important;
    padding-top: 10px;
    padding-left: 20px;
}

.component-popup_panel h1 { /*Edit this if want to change the font that are inside the popup*/
    font-family: 'Gamer', 'Lucida Console', 'Courier New', monospace;
    font-size: 3.5rem !important;
    color: var(--text-inverse) !important;
    margin: 10px 0 !important;
    text-transform: uppercase !important;
}

.component-popup_panel p, .component-popup_panel span {
    font-family: 'Gamer', 'Lucida Console', 'Courier New', monospace;
    font-size: 1.8rem !important;           /*Change here for the size of the font inside the pop up*/
    color: var(--text-inverse) !important;
    text-align: center;
    margin: 10px 0 !important;
}

@keyframes pixelPopIn {
    0% {
        transform: translate(-50%, -50%) scale(0.5);
        opacity: 0;
    }
    70% {
        transform: translate(-50%, -50%) scale(1);
        opacity: 1;
    }
    100% {
        transform: translate(-50%, -50%) scale(1);
    }
}

